k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llsoftware
  labels:
    app: llsoftware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llsoftware
  template:
    metadata:
      labels:
        app: llsoftware
    spec:
      containers:
        - name: llsoftware
          image: ghcr.io/sayjeyhi/llsoftware:latest
          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '250m'
              memory: '256Mi'
