k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catshoulder-service
spec:
  selector:
    app: catshoulder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
