k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llsoftware-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-new"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    acme.cert-manager.io/http01-edit-in-place: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ""
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - llsoftware.co
        - www.llsoftware.co
      secretName: llsoftware-tls-v2
  rules:
    - host: llsoftware.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llsoftware-service
                port:
                  number: 8080
    - host: www.llsoftware.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llsoftware-service
                port:
                  number: 8080
